[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fnum"
description = "Renames files in a directory to be named using sequential integers starting with 1"
license = { text = "GPLv3" }
authors = [{name = "Matt Wisniewski", email = "fnum@mattw.life"}]
keywords = ["fnum", "cli", "utility", "file", "rename", "sequential", "order"]
dynamic = ["version"]
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click",
    "pyyaml",
]

[project.urls]
homepage = "https://github.com/polishmatt/fnum"

[project.scripts]
fnum = "fnum.cli:cli"
