[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fnum"
description = "Renames files in a directory using sequential integers"
license = { text = "MIT" }
authors = [{name = "Matt Wisniewski", email = "healthycrowd@mattw.life"}]
keywords = ["fnum", "cli", "utility", "file", "rename", "sequential", "order"]
dynamic = ["version"]
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click",
    "pyyaml",
    "imeta~=1.1",
]

[project.urls]
homepage = "https://github.com/healthycrowd/fnum"

[project.scripts]
fnum = "fnum.cli:cli"
